[package]
name = "wiobldc"
version = "0.1.0"
edition = "2021"

[dependencies]
wio_clone = { path = "./wio_clone" }
#wio_terminal = "0.3.0"
panic-halt = "0.2"

[dependencies.atsame54p]
version = "0.9"
optional = true

[dependencies.atsamd-hal]
version = "0.12"
default-features = false

[dependencies.bbqueue]
version = "^0.4.11"
optional = true

[dependencies.bitfield]
version = "0.13"

[dependencies.cortex-m]
version = "0.6"

[dependencies.cortex-m-rt]
version = "0.6"
optional = true

[dependencies.display-interface-spi]
version = "0.4"

[dependencies.embedded-sdmmc]
version = "0.3.0"

[dependencies.generic-array]
version = "0.14"
optional = true

[dependencies.heapless]
version = "0.5"

[dependencies.ili9341]
version = "0.4.1"

[dependencies.lis3dh]
version = "0.3.0"

[dependencies.nb]
version = "0.1"
optional = true

[dependencies.nom]
version = "^6.0"
optional = true
default-features = false

[dependencies.seeed-erpc]
version = "0.1.1"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true
[dev-dependencies.embedded-graphics]
version = "0.6"

[dev-dependencies.panic-halt]
version = "0.2"


[features]
default = ["atsamd-hal/samd51p", "rt", "unproven"]
# default = ["atsamd-hal/samd51p", "rt", "unproven", "usb", "wifi"]
rt = ["atsamd-hal/samd51p-rt", "cortex-m-rt"]
unproven = ["atsamd-hal/unproven"]
# usb = ["atsamd-hal/usb", "usb-device", "usbd-serial", "nom"]
# wifi = ["bbqueue", "nb", "nom", "generic-array", "seeed-erpc"]
